--- a/code/memorizing/src/main/java/META-INF/additional-spring-configuration-metadata.json
+++ b/code/memorizing/src/main/java/META-INF/additional-spring-configuration-metadata.json
@@ -68,5 +68,10 @@
     "name": "spring.datasource.connectionProperties",
     "type": "java.lang.String",
     "description": "A description for 'spring.datasource.connectionProperties'"
+  },
+  {
+    "name": "spring.datasource.connectionProperties",
+    "type": "java.lang.String",
+    "description": "A description for 'spring.datasource.connectionProperties'"
   }
 ]}
